<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2020 By Geeks Empire.
  ~
  ~ Created by Elias Fazel
  ~ Last modified 6/10/20 7:08 AM
  ~
  ~ Licensed Under MIT License.
  ~ https://opensource.org/licenses/MIT
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light"
    android:paddingBottom="7dp"
    tools:context=".Preferences.PreferencesUI">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="2dp"
        android:background="@color/light"
        android:cacheColorHint="@android:color/transparent"
        android:fadingEdge="vertical"
        android:fadingEdgeLength="37dp"
        android:requiresFadingEdge="vertical"
        android:scrollbarSize="0dp"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/smartView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:background="@drawable/card_divider_prefs"
                android:clickable="true">

                <ImageView
                    android:id="@+id/prefIcon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/draw_smart" />

                <Switch
                    android:id="@+id/prefSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:clickable="false"
                    android:theme="@style/GeeksEmpire" />

                <TextView
                    android:id="@+id/prefTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/prefIcon"
                    android:layout_toStartOf="@id/prefSwitch"
                    android:layout_toEndOf="@id/prefIcon"
                    android:paddingStart="11dp"
                    android:paddingTop="3dp"
                    android:paddingEnd="11dp"
                    android:paddingBottom="3dp"
                    android:text="@string/smartTitle"
                    android:textColor="@color/darker"
                    android:textSize="21sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/prefTitle"
                    android:layout_toStartOf="@id/prefSwitch"
                    android:layout_toEndOf="@id/prefIcon"
                    android:paddingStart="11dp"
                    android:paddingTop="1dp"
                    android:paddingEnd="11dp"
                    android:paddingBottom="1dp"
                    android:text="@string/smartDesc"
                    android:textColor="@color/dark_transparent"
                    android:textSize="13sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/splitView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/smartView"
                android:layout_marginTop="2dp"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:background="@drawable/card_divider_prefs"
                android:clickable="true">

                <ImageView
                    android:id="@+id/splitIcon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/draw_split" />

                <Switch
                    android:id="@+id/splitSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:clickable="false"
                    android:theme="@style/GeeksEmpire" />

                <TextView
                    android:id="@+id/splitTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/splitIcon"
                    android:layout_toStartOf="@id/splitSwitch"
                    android:layout_toEndOf="@id/splitIcon"
                    android:paddingStart="11dp"
                    android:paddingTop="3dp"
                    android:paddingEnd="11dp"
                    android:paddingBottom="3dp"
                    android:text="@string/splitTitlePref"
                    android:textColor="@color/darker"
                    android:textSize="21sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/splitTitle"
                    android:layout_toStartOf="@id/splitSwitch"
                    android:layout_toEndOf="@id/splitIcon"
                    android:paddingStart="11dp"
                    android:paddingTop="1dp"
                    android:paddingEnd="11dp"
                    android:paddingBottom="1dp"
                    android:text="@string/splitPermission"
                    android:textColor="@color/dark_transparent"
                    android:textSize="13sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/mixView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/splitView"
                android:layout_marginTop="2dp"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:background="@drawable/card_prefs"
                android:clickable="true">

                <ImageView
                    android:id="@+id/mixIcon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/draw_mix" />

                <Switch
                    android:id="@+id/mixSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:clickable="false"
                    android:theme="@style/GeeksEmpire" />

                <TextView
                    android:id="@+id/mixTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/mixIcon"
                    android:layout_toStartOf="@id/mixSwitch"
                    android:layout_toEndOf="@id/mixIcon"
                    android:paddingStart="11dp"
                    android:paddingTop="3dp"
                    android:paddingEnd="11dp"
                    android:paddingBottom="3dp"
                    android:text="@string/mixTitle"
                    android:textColor="@color/darker"
                    android:textSize="21sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/mixTitle"
                    android:layout_toStartOf="@id/mixSwitch"
                    android:layout_toEndOf="@id/mixIcon"
                    android:paddingStart="11dp"
                    android:paddingTop="1dp"
                    android:paddingEnd="11dp"
                    android:paddingBottom="1dp"
                    android:text="@string/mixDesc"
                    android:textColor="@color/dark_transparent"
                    android:textSize="13sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/customIconView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mixView"
                android:layout_marginTop="2dp"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:background="@drawable/card_prefs"
                android:clickable="true">

                <ImageView
                    android:id="@+id/customIconIcon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/draw_pref_custom_icon" />

                <TextView
                    android:id="@+id/customIconTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/customIconIcon"
                    android:layout_toEndOf="@id/customIconIcon"
                    android:paddingStart="11dp"
                    android:paddingTop="3dp"
                    android:paddingEnd="11dp"
                    android:paddingBottom="3dp"
                    android:text="@string/customIconTitle"
                    android:textColor="@color/darker"
                    android:textSize="21sp" />

                <TextView
                    android:id="@+id/customIconDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/customIconTitle"
                    android:layout_toEndOf="@id/customIconIcon"
                    android:paddingStart="11dp"
                    android:paddingTop="1dp"
                    android:paddingEnd="11dp"
                    android:paddingBottom="1dp"
                    android:text="@string/customIconDesc"
                    android:textColor="@color/dark_transparent"
                    android:textSize="13sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/newsView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/customIconView"
                android:layout_marginTop="2dp"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:background="@drawable/card_divider_prefs"
                android:clickable="true">

                <ImageView
                    android:id="@+id/prefIconNews"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_launcher" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/prefIconNews"
                    android:paddingStart="11dp"
                    android:paddingTop="3dp"
                    android:paddingEnd="11dp"
                    android:paddingBottom="3dp"
                    android:text="@string/whatsnew"
                    android:textColor="@color/darker"
                    android:textSize="21sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/supportView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/newsView"
                android:layout_marginTop="2dp"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:background="@drawable/card_prefs"
                android:clickable="true">

                <ImageView
                    android:id="@+id/prefIconSupport"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/draw_support" />

                <TextView
                    android:id="@+id/prefTitleSupport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/prefIconSupport"
                    android:layout_toEndOf="@id/prefIconSupport"
                    android:paddingStart="11dp"
                    android:paddingTop="3dp"
                    android:paddingEnd="11dp"
                    android:paddingBottom="3dp"
                    android:text="@string/supportTitle"
                    android:textColor="@color/darker"
                    android:textSize="21sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/prefTitleSupport"
                    android:layout_toEndOf="@id/prefIconSupport"
                    android:paddingStart="11dp"
                    android:paddingTop="1dp"
                    android:paddingEnd="11dp"
                    android:paddingBottom="1dp"
                    android:text="@string/supportDesc"
                    android:textColor="@color/dark_transparent"
                    android:textSize="13sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/translatorView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/supportView"
                android:layout_marginTop="2dp"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:background="@drawable/card_divider_prefs"
                android:clickable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:paddingStart="11dp"
                    android:paddingTop="3dp"
                    android:paddingEnd="11dp"
                    android:paddingBottom="3dp"
                    android:text="@string/translatorTitle"
                    android:textColor="@color/darker"
                    android:textSize="17sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/floatingView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/translatorView"
                android:layout_marginTop="11dp"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:background="@drawable/card_divider_prefs"
                android:clickable="true">

                <ImageView
                    android:id="@+id/prefIconfloating"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp" />

                <TextView
                    android:id="@+id/prefTitlefloating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/prefIconfloating"
                    android:layout_toEndOf="@id/prefIconfloating"
                    android:paddingStart="11dp"
                    android:paddingTop="3dp"
                    android:paddingEnd="11dp"
                    android:paddingBottom="1dp"
                    android:text="@string/floatingTitle"
                    android:textColor="@color/darker"
                    android:textSize="21sp" />

                <TextView
                    android:id="@+id/prefDescfloating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/prefTitlefloating"
                    android:layout_toEndOf="@id/prefIconfloating"
                    android:paddingStart="11dp"
                    android:paddingTop="1dp"
                    android:paddingEnd="11dp"
                    android:paddingBottom="1dp"
                    android:text="@string/floatingDesc"
                    android:textColor="@color/dark_transparent"
                    android:textSize="13sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_below="@id/floatingView"
                android:layout_centerHorizontal="true"
                android:background="@drawable/card_prefs"
                android:clickable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/twitter"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:src="@drawable/ic_share_twitter" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/facebook"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:src="@drawable/ic_share_fb" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/rate"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:src="@drawable/ic_rate" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/share"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:src="@drawable/ic_share_full" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>